restored existing tests, changed AccessType from HTTPS to FILE