@@ -1,10 +1,9 @@
 package org.ga4gh.drs.model;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.HashMap;
 import java.util.Map;
-
 import org.testng.Assert;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
@@ -15,13 +14,13 @@ public class AccessURLTest {
     public Object[][] getData() throws MalformedURLException {
         return new Object[][] {
             {
-                new URL("https", "ga4gh.org", "/genomic-data-toolkit"),
+                URI.create("https://ga4gh.org/genomic-data-toolkit"),
                 new HashMap<String, String>() {{
                     put("Authorization", "bearer mytoken");
                 }}
             },
             {
-                new URL("https", "ebi.ac.uk", "/cram-reference-registry"),
+                URI.create("https://ebi.ac.uk/cram-reference-registry"),
                 new HashMap<String, String>() {{
                     put("Range", "bytes=0-5000");
                 }}
@@ -29,13 +28,13 @@ public class AccessURLTest {
         };
     }
 
-    private void assertions(AccessURL accessURL, URL url, Map<String, String> headers) {
+    private void assertions(AccessURL accessURL, URI url, Map<String, String> headers) {
         Assert.assertEquals(accessURL.getUrl(), url);
         Assert.assertEquals(accessURL.getHeaders(), headers);
     }
 
     @Test(dataProvider = "cases")
-    public void testAccessURLSingleArgConstructor(URL url, Map<String, String> headers) {
+    public void testAccessURLSingleArgConstructor(URI url, Map<String, String> headers) {
         AccessURL accessURL = new AccessURL(url);
         accessURL.setUrl(url);
         accessURL.setHeaders(headers);
@@ -43,7 +42,7 @@ public class AccessURLTest {
     }
 
     @Test(dataProvider = "cases")
-    public void testAccessURLAllArgsConstructor(URL url, Map<String, String> headers) {
+    public void testAccessURLAllArgsConstructor(URI url, Map<String, String> headers) {
         AccessURL accessURL = new AccessURL(url, headers);
         assertions(accessURL, url, headers);
     }
